kustomize/overlays/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deployment
  namespace: default
spec: 
  template:
    spec:
      containers:
      - name: sample-app
        image: 947944952216.dkr.ecr.ap-northeast-2.amazonaws.com/jaintest
      imagePullSecrets:
      - name: ecr-regcred
