kustomize/overlays/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-0b7b2f93dfa9274e0, subnet-05a1ba611b0458a2f
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: dev-sample-app
            port:
              number: 80
        path: /
